--- a/index.ipynb
+++ b/index.ipynb
@@ -12,9 +12,9 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this lab, we're going to make a rainbow with HTML `<div>` elements. And while we do it we're going to learn about HTML elements, CSS styling, CSS selectors, how color works in CSS, and importing stylesheets.  That might sound like a lot but it isn't.\n",
+    "In this lab, you're going to make a rainbow with HTML `<div>` elements. Through this process, you'll learn about HTML elements, CSS styling, CSS selectors, how color works in CSS and importing stylesheets.  That might sound like a lot but it isn't.\n",
     "\n",
-    "Before we start, here's some basic info about HTML and CSS. Skip to [Making a Rainbow](#making-a-rainbow) if you feel comfortable enough with HTML and CSS."
+    "Before you start, here's some basic info about HTML and CSS. Skip to [Making a Rainbow](#making-a-rainbow) if you feel comfortable enough with HTML and CSS."
    ]
   },
   {
@@ -50,7 +50,7 @@
     "  + Children inherit attributes from their parents.\n",
     "  + Don't nest everything. \n",
     "- Elements next to one another are siblings.\n",
-    "  + Siblings do not inherit from one another, but are important for selecting in CSS.\n",
+    "  + Siblings do not inherit from one another but are important for selecting in CSS.\n",
     "\n",
     "Here is an example of element relations:\n",
     "```html\n",
@@ -61,7 +61,7 @@
     "```\n",
     "\n",
     "## CSS Basics\n",
-    "Cascading Style Sheets, or CSS, is a language created to style an HTML document by telling the browser how specific elements should look. CSS does this by selecting elements based on their tag, ids, classes, or all of the above. The reason for CSS is the separation of concerns. We want HTML only to be concerned with how it displays and demarcates information, and we let CSS worry about how to make that information look pretty.\n",
+    "Cascading Style Sheets, or CSS, is a language created to style an HTML document by telling the browser how specific elements should look. CSS does this by selecting elements based on their tag, ids, classes, or all of the above. The reason for CSS is the separation of concerns. You want HTML only to be concerned with how it displays and demarcates information, and we let CSS worry about how to make that information look pretty.\n",
     "\n",
     "## CSS selectors\n",
     "  - They select elements to assign them styles.\n",
@@ -85,7 +85,7 @@
     "In that directory you'll see three files. `index.html`, `main.css`, and this `README.md`.  Open them in your text editor via your command line.  Also open `index.html` in your browser; if everything is working correctly you should see a white page. Good job!\n",
     "\n",
     "## Making the Divs Visible\n",
-    "If you use the inspector or look at the file in your text editor, you'll see that the basic file stucture is there.  So why can't we see anything?!?!?  That's because the divs have no styling on them right now.  And that's because we never told the browser to include a CSS file that would apply any styles. \n",
+    "If you use the inspector or look at the file in your text editor, you'll see that the basic file structure is there.  So why can't we see anything?!?!?  That's because the divs have no styling on them right now.  And that's because we never told the browser to include a CSS file that would apply any styles. \n",
     "\n",
     "Let's fix this by adding the stylesheet to the `head` like so,\n",
     "```html\n",
@@ -99,7 +99,7 @@
     "\n",
     "Now if you refresh the `index.html` page in your browser you should see an ugly black rainbow.  Gerd Jerb!\n",
     "\n",
-    "Okay so we got the basic outline because in the `main.css` all the `div` elements were selected and styled, but the colors are wrong because the default border color is black.  To fix this we need to learn a little bit more about colors, because while we could just set `color: red;` we should learn how to make colors without words.  We should just use numbers, and not just any set of numbers, but numbers with base pair of 16 rather than base pair of 10 like we use everyday.  These numbers are called hexadecimals and we can use them to make colors.\n",
+    "Okay so you've got the basic outline because in the `main.css` all the `div` elements were selected and styled, but the colors are wrong because the default border color is black.  To fix this we need to learn a little bit more about colors, because while we could just set `color: red;` we should learn how to make colors without words.  We should just use numbers and not just any set of numbers, but numbers with base pair of 16 rather than base pair of 10 like we use everyday.  These numbers are called hexadecimal numbers and we can use them to make colors.\n",
     "\n",
     "## Some Stuff You Should Know About Hex Colors (and Web Colors in General).\n",
     "Hex colors begin with `#` and are followed by, generally, 6 numbers, but some of these numbers are actually letters.  The lowest single digit number in hex is 0 and the highest single digit number is f.  This table might help to visualize what we mean by this.\n",
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "Well done! In this lab you independently modified HTML and CSS files in order to update a webpage."
+    "Well done! In this lab, you independently modified HTML and CSS files in order to update a webpage."
    ]
   }
  ],
@@ -161,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
